--- a/index.html
+++ b/index.html
@@ -5,20 +5,22 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>desafio bosque oscuro</title>
-    <link rel="stylesheet" href="styles.css" >
-    <link rel="preconnect" href="https://fonts.googleapis.com"> 
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
-    <link href="https://fonts.googleapis.com/css2?family=Edu+NSW+ACT+Foundation:wght@400..700&display=swap" 
-        rel="stylesheet"> 
+    <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Edu+NSW+ACT+Foundation:wght@400..700&display=swap"
+        rel="stylesheet">
 </head>
+
 <body>
     <header>
-        <div class="logo"> 
-            <img src="logo.png" alt="Logo" /> 
-        </div> 
+        <div class="logo">
+            <img src="logo.png" alt="Logo" />
+        </div>
         <h1>BOSQUE OSCURO</h1>
         <nav class="inicio">
             <a href="#int">INTRODUCCION</a>
+            <a href="#res">RESUMEN</a>
             <a href="#con">CONTACTO</a>
             <a href="#refl">REFLEXION</a>
             <a href="#gal">GALERIA</a>
@@ -48,6 +50,52 @@
             </iframe>
         </p>
     </section>
+    <section class="resumen">
+        <a id="res"></a>
+        <h2>RESUMEN</h2>
+        <p style="font-family: Arial, Helvetica, sans-serif; text-align: center;">
+            ALDO responde preguntas que le hicieron sobre las momias extraterrestres,nos cuenta que las momias que
+            examinaron
+            en vivo y en directo los profecionales nos cuentan que son falsas,esto solo es una hipotesis,nos comenta que
+            el
+            analis que no se demuestra solo con solo eso, nos comenta que varias personas nos dieron informacion muy
+            importante
+        </p>
+        <p style="font-family: Arial, Helvetica, sans-serif; text-align: center;">
+            Empieza a comentar que es nos facina la idea de los extraterrestres,nos dice que no es tan facil encontrar
+            esta vida
+            inteligente,porque aun no recibimos ninguna señal de ella.
+            nos comenta 4 respuestas a aquella pregunta,la primera es que no existe ninguna paradoja y estamos
+            verdaderamente solos
+            en este mundo,la segunda es que los extraterrestres esta evitando el contacto con nostros,la tercera es que
+            los extraterrestre esten millones de año mas adelande de nuestra civilisaciones
+            la carta y de la cual hablaremos hoy es:
+            La hipótesis del bosque oscuro es una idea fascinante que sugiere que el universo está lleno de
+            civilizaciones alienígenas, pero que estas se mantienen en silencio y son paranoicas. Según esta hipótesis,
+            cualquier civilización avanzada vería a otras formas de vida inteligente como una amenaza potencial y, por
+            lo tanto, optaría por destruir o evitar cualquier señal de vida emergente para proteger su propia
+            existencia1.
+        </p>
+        <p style="font-family: Arial, Helvetica, sans-serif; text-align: center;">
+            Esta teoría se relaciona con la paradoja de Fermi, que cuestiona por qué, si el universo es tan vasto y
+            probablemente alberga muchas civilizaciones, no hemos encontrado evidencia clara de vida extraterrestre1. La
+            hipótesis del bosque oscuro propone que las civilizaciones pueden estar escondidas, evitando comunicarse y
+            exponerse al peligro de ser descubiertas y posiblemente destruidas.
+
+            El término fue popularizado por el autor chino Liu Cixin en su novela de ciencia ficción "El bosque oscuro",
+            donde se presentan tres axiomas clave en un campo que describe como "sociología cósmica":
+
+            Un gran número de civilizaciones están distribuidas por todo el universo.
+            La supervivencia es la necesidad primaria de una civilización.
+            Las civilizaciones se expanden continuamente, pero la cantidad total de materia en el universo permanece
+            constante1.
+            Estos axiomas llevan a la conclusión de que las civilizaciones competirían por los recursos y, por ende,
+            cualquier forma de vida inteligente sería vista como una competencia por la supervivencia1.
+
+            La hipótesis del bosque oscuro ofrece una perspectiva intrigante sobre el silencio aparente del universo y
+            la posible naturaleza de las civilizaciones alienígenas.
+        </p>
+    </section>
     <section class="contacto">
         <a id="con"></a>
         <h2>CONTACTO</h2>
@@ -61,47 +109,51 @@
             Fermi, de la cual la hipótesis del bosque oscuro es una solución propuesta
         </p>
         <p style="font-family: Arial, Helvetica, sans-serif; text-align: center;">
-            Lo que diferencia a “La sociedad de la nieve” es su compromiso con la veracidad y la autenticidad. Basada en
-            testimonios reales y relatos documentados, la película evita sensacionalismos para centrarse en la
-            experiencia
-            humana. Bayona logra capturar con precisión las emociones y dilemas morales que enfrentan los personajes,
-            desde la
-            agonía física hasta los conflictos internos sobre la ética de sus decisiones de supervivencia.
+            La hipótesis del bosque oscuro es la idea de que existen muchas civilizaciones alienígenas en todo el
+            universo, pero que son silenciosas y paranoicas. En este marco, se presume que cualquier civilización que
+            navegue por el espacio vería a cualquier otra vida inteligente como una amenaza inevitable, y por lo
+            tanto, destruiría cualquier vida naciente que haga notar su presencia. Como resultado, el espectro
+            electromagnético sería relativamente silencioso, sin evidencia de ninguna vida extraterrestre inteligente,
+            como en un «bosque oscuro»... lleno de «cazadores armados que acechan entre los árboles como un
+            fantasma». La hipótesis fue descrita por el astrónomo y autor David Brin en su resumen de 1983 de los
+            argumentos a favor y en contra de la paradoja de Fermi, para la cual esta hipótesis es una posible
+            solución. El término «hipótesis del bosque oscuro» se aplicó más tarde a este concepto en la novela de
+            ciencia ficción de Liu Cixin de 2008 El bosque oscuro.
         </p>
         <p style="font-family: Arial, Helvetica, sans-serif; text-align: center;">
-            Uno de los aspectos más impactantes de la película es su exploración profunda de la resiliencia humana y la
-            solidaridad en condiciones extremas. A pesar de las adversidades, los supervivientes muestran una capacidad
-            impresionante para adaptarse y colaborar, desafiando las expectativas y mostrando la fuerza del espíritu
-            humano.
-            Esta temática se aborda con sensibilidad y profundidad, permitiendo al espectador reflexionar sobre la
-            naturaleza
-            humana y los límites de la moralidad en situaciones extremas.
+            En la novela del autor Liu Cixin, el personaje Ye Wenjie presenta la hipótesis del bosque oscuro mientras
+            visita la tumba de su hija. Introduce tres axiomas clave en un nuevo campo que describe como «sociología
+            cósmica.
+            Supongamos un gran número de civilizaciones distribuidas por todo el universo, del orden del número de
+            estrellas observables. Muchísimos de ellos. Esas civilizaciones constituyen el cuerpo de una sociedad
+            cósmica. La sociología cósmica es el estudio de la naturaleza de esta súper-sociedad(basado en la
+            ecuación de Drake).
+            Supongamos que la supervivencia es la necesidad primaria de una civilización.
+            Supongamos que las civilizaciones se expanden continuamente con el tiempo, pero la materia total del
+            universo permanece constante.
         </p>
         <p style="font-family: Arial, Helvetica, sans-serif; text-align: center;">
-            El elenco de “La sociedad de la nieve” brilla con interpretaciones auténticas y conmovedoras que dan vida a
-            los
-            personajes y añaden capas de complejidad a la narrativa. Actores como Enzo Vogrincic, Matías Recalt y
-            Esteban
-            Bigliardi ofrecen actuaciones memorables que capturan la intensidad y el drama de la historia. Además, la
-            cinematografía impresionante de Pedro Luque y la música evocadora de Michael Giacchino complementan
-            perfectamente
-            la dirección de Bayona, creando una experiencia cinematográfica inmersiva.
+            La única conclusión lógica de la aceptación de estos axiomas, dice el personaje, es que cualquier vida
+            inteligente en el universo se enfrentará a todas las demás formas de vida en la lucha por la supervivencia.
+            La hipótesis del bosque oscuro es distinta de la hipótesis del berserker en que muchas civilizaciones
+            alienígenas aún existirían si se hubieran mantenido en silencio. Puede verse como un ejemplo especial de la
+            hipótesis del berserker, si las «sondas letales berserker»(debido a la escasez de recursos) solo se envían
+            a sistemas estelares que muestran signos de vida inteligente.
         </p>
     </section>
     <section class="reflexion">
         <a id="refl"></a>
         <h2>REFLEXION</h2>
         <p style="font-family: Arial, Helvetica, sans-serif; text-align: center; font-size: 100%;">
-            “La sociedad de la nieve” se erige como una obra maestra del cine contemporáneo, gracias a la dirección
-            magistral
-            de Juan Antonio Bayona y las actuaciones sobresalientes del elenco. A través de una narrativa emocionalmente
-            resonante y una representación auténtica de la resiliencia humana, la película ofrece una reflexión profunda
-            sobre
-            la condición humana y los extraordinarios actos de coraje y solidaridad que pueden surgir en los momentos
-            más
-            oscuros. Es una película que no solo entretiene, sino que también te conmueve y provoca una profunda
-            introspección
-            sobre lo que significa ser humano en circunstancias extremas.
+            La hipótesis del bosque oscuro es una metáfora utilizada en el libro "El
+            problema de los tres cuerpos" de Liu Cixin, que sugiere que las civilizaciones alienígenas podrían
+            mantenerse ocultas debido a la naturaleza peligrosa del universo. Esta hipótesis sugiere que las
+            civilizaciones avanzadas podrían preferir ocultarse para evitar ser detectadas por otras civilizaciones
+            potencialmente hostiles. Una reflexión importante que se puede extraer de esta hipótesis es la idea de que
+            en un universo vasto y desconocido, el silencio de otras civilizaciones puede no ser una indicación de su
+            ausencia, sino más bien una estrategia de supervivencia. Nos invita a considerar las implicaciones de
+            nuestra búsqueda de vida extraterrestre y a reflexionar sobre cómo interpretamos la falta de evidencia de
+            otras civilizaciones en el cosmos.
         </p>
     </section>
     <section class="galeria">
